# cat-play-mml

./: .editorconfig  .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PHASE2_INVESTIGATION_REPORT.md  PHASE2_STATUS.md  QUICK_REFERENCE.md  README.ja.md  README.md  TESTING_GUIDE.md  _config.yml  build.rs  requirements.txt
.github/: copilot-instructions.md
docs/: .gitkeep  AGENT_INSTRUCTIONS.md  PROJECT_SETUP_COMPLETION.md  QUICKSTART.md
generated-docs/: development-status-generated-prompt.md  development-status.md  project-overview-generated-prompt.md  project-overview.md
grammar/: .gitkeep
issue-notes/: 11.md  13.md  15.md  17.md  19.md  21.md  23.md  25.md  27.md  29.md  31.md  32.md  34.md  36.md  38.md  9.md
src/: IMPLEMENTATION_PLAN_SUMMARY.md  app.rs  cli.rs  client_manager.rs  converter.rs  input.rs  main.rs  process_manager.rs  temp_file.rs  updater.rs
src/go/: IMPLEMENTATION_PLAN.md  README.md  go.mod  main.go
src/python/: IMPLEMENTATION_PLAN.md  README.md  audio_player.py  mml_parser.py  play_mml.py
src/rust/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
src/rust/src/: main.rs
src/typescript/browser/: IMPLEMENTATION_PLAN.md  README.md  index.html  package.json
src/typescript/browser/src/: main.ts
src/typescript/deno/: IMPLEMENTATION_PLAN.md  README.md  deno.json  main.ts
tests/: .gitkeep
