[package]
name = "cat-play-mml"
version = "0.1.0"
edition = "2021"
authors = ["cat2151"]
license = "MIT"
description = "Music Macro Language (MML) Parser and Player"
default-run = "cat-play-mml"

[[bin]]
name = "cat-play-mml"
path = "src/main.rs"

[dependencies]
# GitHubリポジトリから3つのクレートを参照
mmlabc-to-smf = { git = "https://github.com/cat2151/mmlabc-to-smf-rust" }
smf-to-ym2151log-rust = { git = "https://github.com/cat2151/smf-to-ym2151log-rust" }
ym2151-log-player-rust = { git = "https://github.com/cat2151/ym2151-log-player-rust", features = ["realtime-audio"] }
ym2151-log-play-server = { git = "https://github.com/cat2151/ym2151-log-play-server", rev = "267e35b6f36775eee22c18156705465b36776fe7" }

# 追加の依存関係
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
